Added zip_reading capabilities

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Image Classifier Project.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -72,7 +73,21 @@
       "cell_type": "code",
       "source": [
         "# Imports here\n",
-        "import torch"
+        "import torch\n",
+        "import zipfile"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ZeSnfqNwVPSX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "zipfile.ZipFile('flower_data.zip').extractall('flower_data') "
       ],
       "execution_count": 0,
       "outputs": []
@@ -111,17 +126,17 @@
       "metadata": {
         "id": "5nUnkGf1guLV",
         "colab_type": "code",
+        "outputId": "500db979-4950-474a-98d0-58326f9bd114",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "500db979-4950-474a-98d0-58326f9bd114"
+        }
       },
       "cell_type": "code",
       "source": [
         "df.shape"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,6 +166,63 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "lgnDWOQnV_JL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 476
+        },
+        "outputId": "004fac70-d786-47b1-a792-a7c478927302"
+      },
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os.listdir('flower_data/flower_data/train/1')"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['image_06770.jpg',\n",
+              " 'image_06734.jpg',\n",
+              " 'image_06736.jpg',\n",
+              " 'image_06753.jpg',\n",
+              " 'image_06759.jpg',\n",
+              " 'image_06744.jpg',\n",
+              " 'image_06757.jpg',\n",
+              " 'image_06745.jpg',\n",
+              " 'image_06773.jpg',\n",
+              " 'image_06762.jpg',\n",
+              " 'image_06768.jpg',\n",
+              " 'image_06735.jpg',\n",
+              " 'image_06746.jpg',\n",
+              " 'image_06772.jpg',\n",
+              " 'image_06741.jpg',\n",
+              " 'image_06748.jpg',\n",
+              " 'image_06766.jpg',\n",
+              " 'image_06742.jpg',\n",
+              " 'image_06767.jpg',\n",
+              " 'image_06761.jpg',\n",
+              " 'image_06737.jpg',\n",
+              " 'image_06750.jpg',\n",
+              " 'image_06771.jpg',\n",
+              " 'image_06738.jpg',\n",
+              " 'image_06740.jpg',\n",
+              " 'image_06751.jpg',\n",
+              " 'image_06747.jpg']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
     },
     {
       "metadata": {
